# manga-vault

./: .env.example  .gitignore  Cargo.toml  DOCKER_DEPLOYMENT.md  Justfile  README.md  TODO.md  docker-compose.yml  dprint.json  lcov.info  release_manifest.json  repo.json  rustfmt.toml  stylua.toml
.github/: packages.json
.github/scripts/: assemble_release.py  build_and_upload.py  build_scrapers_upload.py  generate_repo_json.py  prepare_releases.py  release_helpers.py
.github/workflows/: ci.yml  docker-publish.yml  release-artifacts.yml  release.yml  upload_build_to_release  upload_build_to_release.yml  upload_build_to_release_linux.yml  upload_build_to_release_windows.yml  upload_mana-vault_build_to_release.yml  upload_website_build_to_release.yml
api/: Cargo.toml
api/src/: auth.rs  chapter.rs  downloader.rs  favorites.rs  files.rs  lib.rs  manga.rs  read_chapter.rs  scrapper.rs  user.rs
api/src/entities/: categories.rs  chapters.rs  favorite_mangas.rs  files.rs  mangas.rs  mod.rs  prelude.rs  read_chapters.rs  temp.rs  users.rs
api/src/routes/: auth.rs  categories.rs  chapter.rs  favorites.rs  files.rs  manga.rs  mod.rs  read_chapter.rs  scraper.rs  scrapper.rs  user.rs  websocket.rs
api/src/starters/: mod.rs  website.rs  websocket.rs
api/src/websocket/: mod.rs  sync_all.rs  sync_category.rs
apps/http/gql/: Cargo.toml
apps/http/gql/src/: lib.rs  main.rs  query_root.rs  query_root_old.rs
apps/http/gql/src/image_proxy/: mod.rs
apps/http/gql/src/mutations/: auth.rs  category.rs  chapter.rs  favorite_manga.rs  favorite_novel.rs  file.rs  manga.rs  manga_pack.rs  mod.rs  novel.rs  novel_chapter.rs  profile.rs
apps/http/gql/src/objects/: categories.rs  chapter_number.rs  chapters.rs  favorite_mangas.rs  favorite_novels.rs  files.rs  manga_packs.rs  mangas.rs  mod.rs  novel_chapters.rs  novels.rs  read_chapters.rs  read_novel_chapters.rs  scraper.rs  temp.rs  users.rs
apps/http/gql/src/queries/: category.rs  chapter.rs  favorite_manga.rs  favorite_novel.rs  file.rs  manga.rs  manga_pack.rs  mod.rs  novel.rs  read_chapter.rs  read_novel_chapter.rs  scraping.rs  user.rs
apps/http/gql/src/serve_file/: mod.rs
apps/manga_sync/: Cargo.toml
apps/manga_sync/src/: lib.rs
apps/scheduler/: Cargo.toml
apps/scheduler/queue/: Cargo.toml
apps/scheduler/queue/src/: lib.rs  priority_queue_core.rs  queue_item.rs
apps/scheduler/src/: lib.rs  main.rs
apps/website/: .env.example  .gitignore  bun.lockb  codegen.ts  components.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.graphql  svelte.config.js
apps/website/server/: Cargo.toml
apps/website/server/src/: lib.rs  main.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/derive/src/: lib.rs
config/src/: lib.rs
database/: Cargo.toml  db.sql
database/connection/: Cargo.toml
database/connection/src/: lib.rs
database/entities/: Cargo.toml
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20220101_000001_create_tables.rs  m20240328_005922_add_image_id_to_user.rs  m20240331_220133_create_temp_table.rs  m20240430_145751_alter_temp_table.rs  m20250602_200354_add_owner_to_file.rs  m20250602_212249_add_indexes_to_tables.rs  m20250620_173359_mangas_table_changes.rs  m20250624_225246_scanlation_groups.rs  m20250624_230849_create_manga_packs.rs  m20250825_035028_data_time_on_temp_table.rs  m20260107_124950_unique_urls.rs  m20260124_010000_add_scheduler_indexes.rs  m20260124_020000_change_temp_value_to_binary.rs  m20260124_030000_add_novels_and_tracking.rs  m20260125_000000_add_missing_novel_fields.rs  m20260125_000000_increase_temp_value_size.rs  m20260125_010000_make_novel_created_at_nullable.rs  main.rs
database/src/: lib.rs
docker/: docker-compose.yml  gql-api.Dockerfile  plugins.json  scheduler.Dockerfile  website-server.Dockerfile
scrapers/: Cargo.toml  compile-scrapers.py  compiler.py
scrapers/freewebnovel/: Cargo.toml  scraper.wit
scrapers/freewebnovel/src/: lib.rs
scrapers/hari_manga/: Cargo.toml  scraper.wit
scrapers/hari_manga/src/: lib.rs
scrapers/lua_scraper_tester/: Cargo.toml
scrapers/lua_scraper_tester/src/: main.rs
scrapers/manga_dex/: Cargo.toml  scraper.wit
scrapers/manga_dex/src/: lib.rs
scrapers/mangabuddy/: mangabuddy.lua
scrapers/mangakakalot/: mangakakalot.lua
scrapers/mangaread_org/: Cargo.toml
scrapers/mangaread_org/src/: lib.rs  types.rs
scrapers/manhuafast/: manhuafast.lua
scrapers/natomanga/: natomanga.lua
scrapers/novelfire/: Cargo.toml
scrapers/novelfire/src/: lib.rs
scrapers/readernovel/: Cargo.toml  scraper.wit
scrapers/readernovel/src/: lib.rs
scrapers/scraper_core/: Cargo.toml  scraper.wit  types.lua
scrapers/scraper_core/src/: files.rs  lib.rs  plugin.rs  repository.rs
scrapers/scraper_core/src/plugins/: dynlib.rs  lua.rs  mod.rs
scrapers/scraper_core/src/plugins/common/: flaresolverr.rs  html.rs  http.rs  mod.rs
scrapers/scraper_core/src/plugins/common/headless/: fallback.rs  fantoccini.rs  mod.rs  traits.rs
scrapers/scraper_core/src/plugins/globals/: flaresolverr.rs  headless.rs  http.rs  json.rs  log.rs  mod.rs  scraping.rs  string.rs  table.rs  utils.rs
scrapers/scraper_core/src/plugins/wasm/: bindings.rs  flaresolverr.rs  headless.rs  html.rs  http.rs  mod.rs  state.rs
scrapers/scraper_tester/: Cargo.toml
scrapers/scraper_tester/src/: main.rs
scrapers/scraper_types/: Cargo.toml
scrapers/scraper_types/src/: error.rs  lib.rs
scrapers/src/: files.rs  lib.rs  plugin.rs  repository.rs  types.rs
scrapers/src/hari_manga/: mod.rs  scrape.rs
scrapers/src/manga_dex/: mod.rs  scrape.rs
scrapers/src/manga_queen/: mod.rs  scrape.rs
scrapers/src/mangaread_org/: mod.rs  scrape.rs
scrappers/: Cargo.toml
scrappers/src/: lib.rs
scrappers/src/hari_manga/: mod.rs  scrape.rs
scrappers/src/manga_dex/: mod.rs  scrape.rs
scrappers/src/manga_queen/: mod.rs  scrape.rs
scrappers/src/manganato/: mod.rs  scrape.rs
scrappers/src/mangaread_org/: mod.rs  scrape.rs
src/: main.rs
tools/: chromedriver.dotslash  dprint.dotslash  stylua.dotslash
(+109 files in other folders)
