[package]
name = "manga-vault"
version = "0.18.6"
edition = "2024"

[[bin]]
name = "manga-vault"
path = "src/main.rs"

[workspace]
members = [
  "apps/http/*",
  "apps/scheduler",
  "apps/scheduler/queue",
  "config",
  "config/derive",
  "database/*",
  "scrapers/*",
]
exclude = ["scrapers/manhuafast"]

[workspace.dependencies]
config = { path = "config" }
config-derive = { path = "config/derive" }
database-connection = { path = "database/connection" }
database-entities = { path = "database/entities" }
database-migration = { path = "database/migration" }
scraper_core = { path = "scrapers/scraper_core" }
scraper_types = { path = "scrapers/scraper_types" }
http-utils = { path = "apps/http/utils" }
gql-api = { path = "apps/http/gql" }
sea-orm = { version = "1.1.12", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
queue = { path = "apps/scheduler/queue" }
scheduler = { path = "apps/scheduler" }


[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http-utils = { workspace = true }
scraper_core = { workspace = true }
scheduler = { workspace = true }
config = { workspace = true }
database-connection = { workspace = true }
gql-api = { workspace = true }
