[package]
name = "manga-vault"
version = "1.5.5"
edition = "2024"

[[bin]]
name = "manga-vault"
path = "src/main.rs"

[workspace]
members = [
	"apps/http/*",
	"apps/scheduler",
	"apps/scheduler/queue",
	"apps/website/server",
	"config",
	"config/derive",
	"database/*",
	"scrapers/*",
]
exclude = ["scrapers/manhuafast", "scrapers/natomanga", "scrapers/mangabuddy", "scrapers/mangakakalot"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["http2"] }
chrono = "0.4"
config = { path = "config" }
config-derive = { path = "config/derive" }
database-connection = { path = "database/connection" }
database-entities = { path = "database/entities" }
database-migration = { path = "database/migration" }
gql-api = { path = "apps/http/gql" }
queue = { path = "apps/scheduler/queue" }
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
rustls = "0.23"
rustls-pemfile = "2.2"
scheduler = { path = "apps/scheduler" }
scraper_core = { path = "scrapers/scraper_core" }
scraper_types = { path = "scrapers/scraper_types" }
scuffle-http = { version = "0.3.2", features = ["http3", "http3-tls-rustls", "tls-rustls"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
version-check = { path = "apps/http/version_check" }
website-server = { path = "apps/website/server" }
wit-bindgen = "0.46"

[dependencies]
config = { workspace = true }
database-connection = { workspace = true }
gql-api = { workspace = true }
scheduler = { workspace = true }
scraper_core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
version-check = { workspace = true }
website-server = { workspace = true }
