[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
scrappers = { path = "../scrappers" }
connection = { path = "../database/connection" }
actix-web = "4"
actix-multipart = "0.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = "0.4"
cookie = "0.18"
lazy_static = "1.4.0"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.30"
infer = "0.15"
reqwest = "0.11"
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
] }
