[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.24.0"
once_cell = "1.20"
config = { path = "../config" }
scrapers = { path = "../scrapers" }
connection = { path = "../database/connection" }
actix-web = "4"
actix-multipart = "0.7.2"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.1"
jsonwebtoken = "9.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
chrono = "0.4"
cookie = "0.18"
uuid = { version = "1.8.0", features = ["v4"] }
futures-util = "0.3"
infer = "0.16.0"
reqwest = "0.12"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
zip = "2.1.5"
isahc = "1.7"
