[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
config-derive = { workspace = true }
