[package]
name = "scrapers"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { path = "../config" }
notify = "7.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tracing = "0.1"