[package]
name = "manga-sync"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
database-connection = { workspace = true }
database-entities = { workspace = true }
scraper_core = { workspace = true }
scraper_types = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
url = "2"
