[package]
name = "scheduler"
version = "0.4.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "manga-vault-scheduler"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
database-connection = { workspace = true }
database-entities = { workspace = true }
manga-sync = { workspace = true }
queue = { workspace = true }
rand = { workspace = true }
scraper_core = { workspace = true }
scraper_types = { workspace = true }
sea-orm = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
url = "2"
version-check = { workspace = true }
