[package]
name = "database-connection"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
config = { workspace = true }
config-derive = { workspace = true }
scraper_core = { workspace = true }
database-migration = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
url = "2.5"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
toml = "0.8"