[package]
name = "database-migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "database_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies.sea-orm-migration]
version = "1.1.12"
features = [
	"sqlx-sqlite",
	"sqlx-postgres",
	"sqlx-mysql",
	"runtime-tokio-native-tls",
]
