[package]
name = "freewebnovel"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
scraper = "0.26"
urlencoding = "2.1"
wit-bindgen = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
