[package]
name = "freewebnovel"
version = "0.4.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
scraper = "0.27"
urlencoding = "2.1"
wit-bindgen = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
