[package]
name = "manga_dex"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.42"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
