[package]
name = "manga_dex"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
once_cell = "1.21.3"
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
