[package]
name = "mangaread_org"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
scraper_types = { path = "../scraper_types" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.23"
