[package]
name = "novelfire"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
scraper = "0.26"
wit-bindgen = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
