[package]
name = "readernovel"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
scraper = "0.27"
serde_json = "1.0"
wit-bindgen = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
