[package]
name = "scraper_core"
version = "0.5.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
config = { workspace = true }
config-derive = { workspace = true }
fantoccini = "0.22"
futures = "0.3"
html-to-markdown-rs = "2"
md5 = "0.8"
mlua = { version = "0.11", features = ["lua54", "serde", "anyhow", "async", "userdata-wrappers", "vendored", "send", "serialize"] }
notify = "8"
openssl = "0.10"
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { version = "0.25", features = ["serde", "atomic"] }
scraper_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v4"] }
wasm-bindgen = "0.2"
wasmtime = "41"
wasmtime-wasi = "41"

[dev-dependencies]
mockito = "1.7"
tracing-test = "0.2"
walkdir = "2"
