[package]
name = "scraper_core"
version = "0.5.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
aes = "0.9"
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22"
cbc = "0.2"
cipher = "0.5.1"
config = { workspace = true }
config-derive = { workspace = true }
fantoccini = "0.22"
futures = "0.3"
md5 = "0.8"
mlua = { version = "0.11", features = ["lua54", "serde", "anyhow", "async", "userdata-wrappers", "vendored", "send", "error-send"] }
notify = "8"
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { version = "0.26", features = ["serde", "atomic"] }
scraper_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1.23", features = ["v4"] }
wasm-bindgen = "0.2"
wasmtime = "44"
wasmtime-wasi = "44"

[dev-dependencies]
mockito = "1.7"
tracing-test = "0.2"
walkdir = "2"
