[package]
name = "gql-api"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "manga-vault-gql"
path = "src/main.rs"

[dependencies]
async-graphql = { version = "7.0", features = [
  "tracing",
  "chrono",
  "unblock",
  "tokio-sync",
] }
async-graphql-axum = "7.0"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
jsonwebtoken = "9.3"
thiserror = "2.0"
bcrypt = "0.17"
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
config = { workspace = true }
config-derive = { workspace = true }
database-connection = { workspace = true }
database-entities = { workspace = true }
anyhow = "1"
sea-orm = { workspace = true }
scraper_core = { workspace = true }
scraper_types = { workspace = true }
rand = "0.9"
async-trait = "0.1"
argon2 = "0.5.3"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3.31"
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
httpdate = "1.0.3"
