[package]
name = "gql-api"
version = "0.5.9"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "manga-vault-gql"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
async-graphql = { version = "7.0", features = ["tracing", "chrono", "unblock", "tokio-sync"] }
async-graphql-axum = "7.0"
async-trait = "0.1"
axum = { workspace = true }
bcrypt = "0.17"
chrono = { workspace = true }
config = { workspace = true }
config-derive = { workspace = true }
database-connection = { workspace = true }
database-entities = { workspace = true }
futures-util = "0.3"
httpdate = "1.0.3"
image = "0.25"
jsonwebtoken = "9.3"
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
scraper_core = { workspace = true }
scraper_types = { workspace = true }
scuffle-http = { workspace = true, features = ["http3", "http3-tls-rustls", "tls-rustls"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
version-check = { workspace = true }
webp = "0.3"
