[package]
name = "queue"
version = "1.0.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
dashmap = "6.1"
futures = "0.3"
rand = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
tracing = { workspace = true }
