[package]
name = "website-server"
version = "0.4.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "manga-vault-website-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
config-derive = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
scuffle-http = { workspace = true, features = ["http3", "http3-tls-rustls", "tls-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["full"] }
tracing = { workspace = true }
version-check = { workspace = true }
